old slurm/slurm-4889.out
clang++ -std=c++14 -stdlib=libc++ -O3 -ferror-limit=2 -Weverything -Wno-c++98-compat -Wno-c++98-compat-pedantic -Wno-sign-conversion -Wno-exit-time-destructors -Wno-float-equal -Wno-global-constructors -Wno-missing-declarations -Wno-unused-parameter -Wno-padded -Wno-shadow -Wno-weak-vtables -Wno-missing-prototypes -Wno-unused-variable -ferror-limit=1 -Wno-deprecated -Wno-conversion -Wno-double-promotion -c src/direct_cuda_pattern.cc -o ./obj/direct_cuda_pattern.o -Iinclude -I/usr/local/cuda/include -I/usr/local/include -I/usr/include/c++/v1
In file included from src/direct_cuda_pattern.cc:3:
include/f/cuda_pattern/cuda_pattern.hpp:54:46: error: no member named 'maxdim' in 'f::cuda_pattern_config'; did you mean 'max_dim'?
           unsigned long offset = 6 * config.maxdim * config.maxdim * 0 * 2; //6*maxdim*maxdim*tilt_index*2 //times 2 because complex type.
                                             ^~~~~~
                                             max_dim
include/f/cuda_pattern/cuda_pattern_config.hpp:18:37: note: 'max_dim' declared here
        size_type                   max_dim;
                                    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
2 errors generated.
Makefile:28: recipe for target 'direct_cuda_pattern' failed
make: *** [direct_cuda_pattern] Error 1
Merit: 1.16459e-05
ABS: 0.0222931
a is 
0	0.00024414000000000000371	-6.3790100000000002881e-09	0.0005930819999999999842	6.3790100000000002881e-09	0.0005930819999999999842	6.3790100000000002881e-09	0.0005930819999999999842	0	-0.065429689999999998684	-7.396030000000000153e-09	0.082869600000000001594	-6.3790100000000002881e-09	0.0005930819999999999842	7.396030000000000153e-09	0.082869600000000001594	0	-0.065429689999999998684	
0.9999996184607622407	0.00024413789554892883463	-5.2502679126023513986e-06	0.00059305191335517592598	-5.2375567205330829016e-06	0.00059305096626032134405	-5.2375567205329499174e-06	0.00059305096626032145248	0.99443568783852032134	-0.065158641234975694934	0.0054118816946799432402	0.082597663557660044864	-5.2502679126022887182e-06	0.00059305191335517592598	0.0054118964378692714645	0.082597662584063036295	0.99443568783852021031	-0.065158641234975694934	
-1.2806184251983001587	-6.1274050480409112396	0.0028818777621642667312	-0.0028612009928703535828	0.0028818154339338543715	-0.0028612558938368192786	0.0028818154339338548052	-0.0028612558938368192786	-1.558622022626704906	-5.8060548314914264267	0.36155965321468352958	-0.40430840294925524114	0.0028818777621642667312	-0.0028612009928703535828	0.36155958104084928717	-0.40430846743618004124	-1.558622022626704906	-5.8060548314914264267	
-19.710074834583114267	94.192253596009365424	0.0018943800103750009674	-0.03439342988267495016	0.0018936130040584351654	-0.034393470189006562776	0.0018936130040584351654	-0.034393470189006562776	-19.917274367751616637	98.158176983740560217	0.26211435284696399384	-4.9631241836574089277	0.0018943800103750009674	-0.03439342988267495016	0.26211346674474589324	-4.9631242304411031796	-19.917274367751616637	98.158176983740560217	
39.173623545260760181	0.0078149819515070332449	-9.8905886709673693008e-05	0.018984558155469635765	-9.8497779942131186148e-05	0.018984540296847870339	-9.8497779942131186148e-05	0.018984540296847870339	39.068711382111530384	-2.0927959039257233442	0.10205017383061765202	2.6510473305692658919	-9.8905886709673693008e-05	0.018984558155469635765	0.10205064703534605375	2.6510473122104629695	39.068711382111530384	-2.0927959039257233442	
-19.711632374035360726	-94.220678647028321961	-0.0018893280183968229249	-0.034659002160299635931	-0.0018900469807417591157	-0.034658961074317477802	-0.0018900469807417591157	-0.034658961074317477802	-19.499852710001142952	-90.536994116038940206	-0.2665686872972133914	-4.6885841746076870606	-0.0018893280183968229249	-0.034659002160299635931	-0.26656952400985250984	-4.6885841270225059318	-19.499852710001142952	-90.536994116038940206	
0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	
0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	
0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	0	

max dim 9

real	0m0.850s
user	0m0.160s
sys	0m0.636s
